# project-manager-cli

./: .gitignore  2025-12-18-analyze-this-code.txt  CLAUDE.md  CLI_UI_IMPROVEMENTS_SUMMARY.md  COMMAND_REFERENCE.md  CONFIGURATION.md  HELP_IMPROVEMENTS_SUMMARY.md  INSTALL.md  ISSUES_REPORT.md  MIGRATION.md  QUICKSTART.md  README.md  STRUCTURE.md  SUMMARY.md  USAGE.md  main.py  plan-review-final-plan-zazzy.txt  pyproject.py  pyproject.toml  requirements-new.txt  requirements.txt
.claude/: GUI_IMPLEMENTATION_CONTEXT.md  settings.local.json
.claude/plans/: gui-enhancements.md  hazy-floating-llama.md  tui-enhancements.md  tui-modernization.md
.cursor/rules/: code-structure.mdc  powershell-integration.mdc  project-overview.mdc
.docs/ai-docs/: alefragnani-vscode-project-manager.txt
.docs/dev/: ARCHITECTURE.md  MIGRATION.md  STRUCTURE.md  SUMMARY.md
.docs/user/: Archive_README-TUI.md  INSTALL.md  QUICKSTART.md  README-TUI.md  TROUBLESHOOTING.md
src/: __init__.py
src/core/: __init__.py  config.py  config_manager.py  database.py  exceptions.py  models.py
src/integrations/: __init__.py  base.py  cursor.py  explorer.py  jetbrains.py  registry.py  terminal.py  vscode.py
src/project_manager_cli/: __init__.py  app.py  cli.py  config.py  exceptions.py  main.py  models.py  rich_help.py
src/project_manager_cli/formatters/: __init__.py  html_generator.py  table_formatter.py
src/project_manager_cli/services/: __init__.py  ai_service.py  archive_service.py  database_service.py  docs_discovery_service.py  git_service.py  logging_service.py  project_manager_service.py  project_service.py  windows_context_menu_service.py
src/project_manager_desktop/: __init__.py  main.py  models.py  theme.py  window.py
src/project_manager_desktop/dialogs/: __init__.py  archive_dialog.py
src/project_manager_desktop/widgets/: __init__.py  tag_editor.py
src/ui/: __init__.py  app.py
src/ui/screens/: __init__.py  dashboard.py  project_detail.py
src/ui/widgets/: __init__.py  project_card.py  search_bar.py  tag_pill.py
