[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-manager-cli"
version = "0.1.0"
description = "A CLI tool for managing project metadata and Cursor project integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "termcolor",
    "python-dotenv",
    "requests",
    "openai",
    "pyyaml",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/project-manager-cli"
Repository = "https://github.com/yourusername/project-manager-cli"
Issues = "https://github.com/yourusername/project-manager-cli/issues"

[project.scripts]
project-manager-cli = "project_manager_cli.cli:main"
pm-cli = "project_manager_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_manager_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
] 