[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-manager-cli"
version = "0.2.0"
description = "A CLI tool for managing project metadata and Cursor project integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Chris Breault", email = "chrisbreault81@gmail.com"},
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "textual>=0.47.0",
    "rich>=13.10.0",
    "termcolor>=2.3.0",
    "openai>=1.65.2",
    "requests>=2.32.3",
    "pyyaml>=6.0.1",
    "click>=8.0.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.7.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "pymdown-extensions>=10.7.0",
]


[project.urls]
Homepage = "https://github.com/yourusername/project-manager-cli"
Repository = "https://github.com/yourusername/project-manager-cli"
Issues = "https://github.com/yourusername/project-manager-cli/issues"

[project.scripts]
project-manager-cli = "project_manager_cli.cli:main"
pm-cli = "project_manager_cli.cli:main"
pm-gui = "project_manager_desktop.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_manager_cli", "src/project_manager_desktop", "src/core", "src/ui", "src/integrations"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
] 
